--- a/public/admin/login.html
+++ b/public/admin/login.html
@@ -40,7 +40,7 @@
 								<input type="password" name="password" id="password" value="" placeholder="Password" />
 								<br/>
 								<br/>
-								<button href="#" class="button primary fit">Login Here</button>
+								<button href="#" class="button primary fit">Login</button>
 							</form>
 						</div>
 					</div>
