--- a/public/index.html
+++ b/public/index.html
@@ -60,7 +60,7 @@
 						<section>
 							<div class="content">
 								<header>
-									<a href="#" class="icon fa-paper-plane-o"><span class="label">Icon</span></a>
+									<a href="tourist.html" class="icon fa-paper-plane-o"><span class="label">Icon</span></a>
 									<h3>Tourist Attractions</h3>
 								</header>
 								<p>Its a bird! Its a Plane not Its a Famous Tourist Attraction. Let me show you how to get there</p>
